--- a/License Manager/packages.config
+++ b/License Manager/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net45" />
   <package id="Portable.Licensing" version="1.1.0" targetFramework="net45" />
 </packages>
